header: fixed responsiveness + added hamburger toggle on mobile

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -19,6 +19,15 @@
       font-weight: bold;
       color: var(--mat-sys-primary);
     }
+
+	.hamburger {
+		display: none;
+		font-size: 1.8rem;
+		background: none;
+		border: none;
+		cursor: pointer;
+		color: var(--mat-sys-on-surface);
+	}
   
     .nav-links {
       display: flex;
@@ -36,5 +45,57 @@
         }
       }
     }
+}
+
+@media (max-width: 768px) {
+	.header {
+	  flex-direction: row;
+	  justify-content: space-between;
+	  align-items: center;
+	  padding: 2rem 1rem;
+	  position: relative;
+  
+	  .hamburger {
+		display: block;
+	  }
+  
+	  .nav-links {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		background-color: var(--mat-sys-surface);
+		flex-direction: column;
+		align-items: flex-start;
+		padding: 1rem 2rem;
+		gap: 1rem;
+		display: none;
+		height: 100vh;
+		overflow-y: auto;
+		z-index: 999;
+  
+		&.open {
+		  display: flex;
+		}
+  
+		a {
+		  font-size: 1rem;
+		  width: 100%;
+		}
+
+		.close-btn {
+			font-size: 2rem;
+			position: absolute;
+			top: 1rem;
+			right: 1rem;
+			background: none;
+			border: none;
+			color: var(--mat-sys-on-surface);
+			cursor: pointer;
+		}
+	  }
+	}
   }
+  
+  
   
